# AlgHaffForMath

Лабораторная 2/: Readme.md  huffman.py  main.py  text_small.txt
Лабораторная 3/: code.py  dd.py
Лабораторная 4/: pyproject.toml  qr.py
Лабораторная 5/: Blum-Blum-Shub(BBS).py  chacha20.py  lcg.py  pyproject.toml  вихрь Мерсенна.py
Лабораторная 6/: rsa.py
