[project]
name = "lab4"
version = "0.1.0"
description = ""
authors = [
    {name = "MaksimKislyakov",email = "maksimkislakov35@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "barcode (>=1.0.4,<2.0.0)",
    "qrcode[pil] (>=8.2,<9.0) ; python_version >= \"3.14\" and python_version < \"4.0\"",
    "python-barcode (>=0.16.1,<0.17.0) ; python_version >= \"3.14\" and python_version < \"4.0\"",
    "pillow (>=12.0.0,<13.0.0) ; python_version >= \"3.14\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
